--- a/examples/meson.build
+++ b/examples/meson.build
@@ -55,6 +55,10 @@ compositors = {
 		'src': 'scene-graph.c',
 		'proto': ['xdg-shell'],
 	},
+	'output-layers': {
+		'src': 'output-layers.c',
+		'proto': ['xdg-shell'],
+	},
 }
 
 clients = {
