--- a/include/wlr/config.h.in
+++ b/include/wlr/config.h.in
@@ -9,6 +9,7 @@
 #mesondefine WLR_HAS_VULKAN_RENDERER
 
 #mesondefine WLR_HAS_GBM_ALLOCATOR
+#mesondefine WLR_HAS_VULKAN_ALLOCATOR
 
 #mesondefine WLR_HAS_XWAYLAND
 
