examples/explicit-sync: new example

--- a/examples/meson.build
+++ b/examples/meson.build
@@ -57,6 +57,10 @@ compositors = {
 		'src': 'scene-graph.c',
 		'proto': ['xdg-shell'],
 	},
+	'explicit-sync': {
+		'src': 'explicit-sync.c',
+		'proto': ['xdg-shell'],
+	},
 }
 
 clients = {
