--- a/.github/workflows/git-mirroring.yml
+++ b/.github/workflows/git-mirroring.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: make distcheck
+    - name: checkout
       run: git clone --bare https://gitlab.freedesktop.org/wlroots/wlroots
-    - name: dsdsd
+    - name: push
       run: cd wlroots && git push --mirror https://github.com/ktlwap/wlroots.git
