--- a/.github/workflows/git-mirroring.yml
+++ b/.github/workflows/git-mirroring.yml
@@ -1,7 +1,8 @@
 name: Git Mirroring
-on:
-  schedule:
-    - cron: '*/5 * * * *'
+on: workflow_dispatch
+#on:
+#  schedule:
+#    - cron: '*/5 * * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
