--- a/.github/workflows/git-mirroring.yml
+++ b/.github/workflows/git-mirroring.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: checkout
-      run: git clone --bare https://gitlab.freedesktop.org/wlroots/wlroots.git
+      run: |
+          git clone --bare https://gitlab.freedesktop.org/wlroots/wlroots.git
+          git config --local user.email "wlroots@ktlwap.com"
+          git config --local user.name "wlroots Automation"
     - name: push
       run: cd wlroots.git && git push --mirror https://github.com/ktlwap/wlroots.git
