--- a/.github/workflows/git-mirroring.yml
+++ b/.github/workflows/git-mirroring.yml
@@ -10,8 +10,4 @@ jobs:
     - name: checkout
       run: git clone --bare https://gitlab.freedesktop.org/wlroots/wlroots.git
     - name: push
-      run: |
-          cd wlroots.git
-          git config --local user.email "wlroots@ktlwap.com"
-          git config --local user.name "wlroots Automation"
-          git push --mirror https://github.com/ktlwap/wlroots.git
+      run: cd wlroots.git && git push --mirror https://ktlwap:{{password}}@github.com/ktlwap/wlroots.git
